# Learning-Rust

./: .travis.yml  Cargo.toml  LICENSE  README.md  lib.rs  loops.rs  main.rs  mod.rs  run.rs  simple.rs
.github/workflows/: githubdeploy.yml  rust.yml  rust_linux.yml
first_program/: Cargo.toml
my first project/: FirstProject.cpp
run/: complex.rs  mod.rs
