  
[package]
name = "first_program"
version = "0.1.0"
authors = ["EternalMC <jamesdrothermel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.7"
#[macro_use] extern crate text_io;

[[bin]]
name = "first_program"
path = "main.rs"
